--- a/Alicargo/Content/app/entity.css
+++ b/Alicargo/Content/app/entity.css
@@ -73,7 +73,6 @@
 		line-height: 1.4em;
 	}
 
-
 	.grid .k-button-icontext {
 		height: 16px;
 		margin: 0;
@@ -130,6 +129,7 @@
 
 	.grid-details-toolbar select {
 		margin-bottom: 0;
+		height: 20px;
 	}
 
 	.grid-details-toolbar label {
