renamed email field in client

--- a/Alicargo/Views/Client/EditorTemplates/ClientModel.cshtml
+++ b/Alicargo/Views/Client/EditorTemplates/ClientModel.cshtml
@@ -58,7 +58,7 @@
 				: null)
 	</div>
 	<div class="span4">
-		@Html.EditorWithLabelFor(model => model.Email)
+		@Html.EditorWithLabelFor(model => model.Emails)
 		@Html.EditorWithLabelFor(model => model.Phone)
 	</div>
 </div>
