--- a/Alicargo/Views/RestorePassword/Index.cshtml
+++ b/Alicargo/Views/RestorePassword/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Alicargo.Core.Resources
 @using Resources
-@using (Html.BeginForm(MVC.Authentication.Login(), FormMethod.Post, new { @class = "form-signin" }))
+@using (Html.BeginForm(MVC.RestorePassword.Index(), FormMethod.Post, new { @class = "form-signin" }))
 {
 	<p>
 		@Pages.InputEmail
