--- a/Alicargo/Views/RestorePassword/Index.cshtml
+++ b/Alicargo/Views/RestorePassword/Index.cshtml
@@ -5,9 +5,9 @@
 	<p>
 		@Pages.InputEmail
 	</p>
-	@Html.TextBox("email", null, new { @class = "input-block-level", placeholder = Entities.Email })
-	@Html.ValidationSummary(true)
+	@Html.TextBox("email", null, new { @class = "input-block-level", placeholder = Entities.Email })	
 	<div class="text-center">
 		<button class="btn btn-large btn-primary" type="submit">@Pages.RestorePassword</button>
 	</div>
+	@Html.ValidationSummary()
 }
