renamed events tables and SPs

--- a/Alicargo/Views/EmailTemplate/Edit.cshtml
+++ b/Alicargo/Views/EmailTemplate/Edit.cshtml
@@ -2,7 +2,7 @@
 @using Alicargo.MvcHelpers.BundleHelpres
 @using Alicargo.MvcHelpers.Extensions
 @using Resources
-@model Alicargo.ViewModels.EmailTemplate.ApplicationEventTemplateModel
+@model Alicargo.ViewModels.EmailTemplate.EventTemplateModel
 <p>
 	@Html.ActionLink(Pages.Help, MVC.EmailTemplate.Help(), new { @class = "pull-right", target = "balnk" })
 	<b>
