--- a/Alicargo/Views/EmailTemplate/EditorTemplates/EventTemplateModel.cshtml
+++ b/Alicargo/Views/EmailTemplate/EditorTemplates/EventTemplateModel.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Alicargo.Core.Resources
 @using Alicargo.MvcHelpers.Extensions
 @using Resources
-@model Alicargo.ViewModels.EmailTemplate.ApplicationEventTemplateModel
+@model Alicargo.ViewModels.EmailTemplate.EventTemplateModel
 
 @Html.HiddenFor(x => x.EventType)
 <div class="row">
