--- a/Alicargo/Views/State/EditorTemplates/StateEditModel.cshtml
+++ b/Alicargo/Views/State/EditorTemplates/StateEditModel.cshtml
@@ -19,7 +19,7 @@
 		<div class="span3">
 			<br />
 			<div class="state-edit-checkbox">
-				@Html.EditorWithLabelFor(x => x.UseApplicationEventTemplate)
+				@Html.EditorWithLabelFor(x => x.UseEventTemplate)
 			</div>
 		</div>
 	</div>
