--- a/Alicargo/Views/Balance/Payment.cshtml
+++ b/Alicargo/Views/Balance/Payment.cshtml
@@ -1,4 +1,4 @@
 ﻿@using Alicargo.MvcHelpers.Extensions
 @using Resources
 @model Alicargo.ViewModels.Calculation.Admin.PaymentModel
-@Html.EditPage(Url.Action(MVC.Payment.Payment((long)ViewBag.ClientId)), Pages.Add)
+@Html.EditPage(Url.Action(MVC.Balance.Payment((long)ViewBag.ClientId)), Pages.Add)
