--- a/Alicargo/Views/Balance/EditorTemplates/PaymentModel.cshtml
+++ b/Alicargo/Views/Balance/EditorTemplates/PaymentModel.cshtml
@@ -5,6 +5,17 @@
 	<div class="span2">
 		@Html.EditorWithLabelFor(x => x.Money)
 	</div>
+	<div class="span2">
+		@Html.LabelFor(model => model.Timestamp)
+		<div class="date-holder">
+			@Html.EditorFor(model => model.Timestamp)
+		</div>
+		<script>
+			$(function() {
+				$(".date-holder input").kendoDateTimePicker();
+			})
+		</script>
+	</div>
 </div>
 <div class="row">
 	<div class="span8">
