--- a/Alicargo/Views/ClientCalculation/Index.cshtml
+++ b/Alicargo/Views/ClientCalculation/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using Alicargo.MvcHelpers.BundleHelpres
+﻿@using Alicargo.Core.Resources
+@using Alicargo.MvcHelpers.BundleHelpres
 @using Resources
 @inherits BaseWebViewPage
 <style>
@@ -9,10 +10,12 @@
 </style>
 <p>
 	@Html.ActionLink(Pages.Excel, MVC.ClientCalculation.Excel(), new { @class = "btn btn-info" })
+	@Entities.Balance: @ViewBag.Balance.ToString("N2")
+	@Html.ActionLink(Pages.History, MVC.ClientCalculation.History((long)ViewBag.ClientId))
 </p>
 <div id="calculation-grid" class="grid"></div>
 
 @section scripts
 {
-	@Scripts.Render(JsPaths.ClientCalculationJs)	
+	@Scripts.Render(JsPaths.ClientCalculationJs)
 }
