--- a/Alicargo/Content/app/payment.css
+++ b/Alicargo/Content/app/payment.css
@@ -6,19 +6,27 @@
 		background-color: #c5c5c5;
 	}
 
+	.payment-history tbody td {
+		border-top: 1px solid #c5c5c5;
+	}
+
 	.payment-history td {
 		border-right: 1px solid #000;
 		padding: 0 5px;
 	}
 
-	.payment-history td:last-child {
-		border-right: none;
-	}
+		.payment-history td:last-child {
+			border-right: none;
+		}
 
 	.payment-history .money {
-		width: 70px;
+		-moz-min-width: 70px;
+		-ms-min-width: 70px;
+		-o-min-width: 70px;
+		-webkit-min-width: 70px;
+		min-width: 70px;
 	}
 
-	.payment-history .timestamp {
+.payment-history .timestamp {
 		width: 200px;
 	}
