--- a/Alicargo/Views/Calculation/Index.cshtml
+++ b/Alicargo/Views/Calculation/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using Alicargo.MvcHelpers.BundleHelpres
+﻿@using Alicargo.Core.Resources
+@using Alicargo.MvcHelpers.BundleHelpres
 @using Alicargo.MvcHelpers.Extensions
 @using Resources
 @inherits BaseWebViewPage
@@ -9,6 +10,12 @@
 	}
 </style>
 <p class="select-client-holder">
+	<span class="pull-right">
+		@Entities.Balance: 
+		<span id="total-balance">
+			@ViewBag.Balance.ToString("N2")
+		</span>
+	</span>
 	@Html.ActionLink(Pages.Excel, MVC.Calculation.Excel(), new { @class = "btn btn-info" })
 	@Html.Action(MVC.Balance.BalanceButtons())
 </p>
