splitted balance and calculation

--- a/Alicargo/Views/Calculation/Index.cshtml
+++ b/Alicargo/Views/Calculation/Index.cshtml
@@ -1,6 +1,5 @@
 ﻿@using Alicargo.Core.Resources
 @using Alicargo.MvcHelpers.BundleHelpres
-@using Alicargo.MvcHelpers.Extensions
 @using Resources
 @inherits BaseWebViewPage
 <style>
@@ -11,10 +10,14 @@
 </style>
 <p class="select-client-holder">
 	<span class="pull-right">
-		@Entities.Balance: 
+		@Entities.Balance:
 		<span id="total-balance">
-			@ViewBag.Balance.ToString("N2")€
-		</span>
+			@ViewBag.TotalBalance.ToString("N2")
+		</span>€,
+		@Pages.Calculation:
+		<span id="total-calculation">
+			@ViewBag.TotalCalculation.ToString("N2")
+		</span>€
 	</span>
 	@Html.ActionLink(Pages.Excel, MVC.Calculation.Excel(), new { @class = "btn btn-info" })
 	@Html.Action(MVC.Balance.BalanceButtons())
