--- a/Alicargo/Views/Balance/Increase.cshtml
+++ b/Alicargo/Views/Balance/Increase.cshtml
@@ -6,5 +6,5 @@
 	@Pages.BalanceIncrease: @ViewBag.Nic,
 	@Entities.Balance: @ViewBag.Balance.ToString("N2")
 </h1>
-@Html.EditPage(Url.Action(MVC.Balance.Increase((long)ViewBag.ClientId)), Pages.BalanceIncrease)
+@Html.EditPage(Url.Action(MVC.Balance.Increase((long)ViewBag.ClientId)), Pages.Add)
 @Html.Action(MVC.Balance.History((long)ViewBag.ClientId))
