--- a/Alicargo/Views/Balance/Decrease.cshtml
+++ b/Alicargo/Views/Balance/Decrease.cshtml
@@ -6,5 +6,5 @@
 	@Pages.BalanceDecrease: @ViewBag.Nic,
 	@Entities.Balance: @ViewBag.Balance.ToString("N2")
 </h1>
-@Html.EditPage(Url.Action(MVC.Balance.Decrease((long)ViewBag.ClientId)), Pages.BalanceDecrease)
+@Html.EditPage(Url.Action(MVC.Balance.Decrease((long)ViewBag.ClientId)), Pages.Debiting)
 @Html.Action(MVC.Balance.History((long)ViewBag.ClientId))
