Updated templates help

--- a/Alicargo/Views/EmailTemplate/Help.cshtml
+++ b/Alicargo/Views/EmailTemplate/Help.cshtml
@@ -7,7 +7,7 @@
 	Если город в заявке указан, то результат будет выглядить нормально -  "Город: Москва", а если город не указан, то это будет выглядеть так: "Город: ".
 	Это выглядит не очень хорошо. Чтобы решить эту проблему, можно указать во вставке уточнение формата в квадратных скобках.
 	Например, такая вставка {TransitCity [Город: {0}]} будет заменена на текст "Город: Москва", если город в заявке указан, а если город не указан, то ничего добавлено не будет, вставка в результат не добавляется.
-	В формате {0} указывает, куда будет поставлено реальное значение.	
+	В формате {0} указывает, куда будет поставлено реальное значение.
 </p>
 <p>
 	<b>Полный список вставок, которые можно использовать:</b>
@@ -56,5 +56,31 @@
 		<li>AirWaybillDateOfArrival - Дата прилета</li>
 		<li>AirWaybillGTD - ГТД</li>
 		<li>UploadedFile - Загруженный файл</li>
+	</ul>
+</p>
+<p>
+	<b>Для событий "Расчет" и "Расчет отменен" можно использовать:</b>
+	<ul>
+		<li>ClientBalance - Баланс клиента</li>
+		<li>CalculationTimestamp - Время расчета</li>
+		<li>AirWaybillDisplay - Авианакладная</li>
+		<li>ApplicationDisplay - Заявка</li>
+		<li>TariffPerKg - Тариф за килограм</li>
+		<li>ScotchCost - Цена за скотч</li>
+		<li>InsuranceCost - Страховка</li>
+		<li>FactureCost - Цена за фактура</li>
+		<li>TransitCost - Цена за доставку</li>
+		<li>PickupCost - Цена за забор</li>
+	</ul>
+</p>
+<p>
+	<b>Для событий "Баланс клиента увеличен" и "Баланс клиента уменьшен отменен" можно использовать:</b>
+	<ul>
+		<li>ClientBalance - Баланс клиента</li>
+		<li>Money - Введенные деньги</li>
+		<li>Comment - Комментарий</li>
+		<li>ClientNic - Ник клиента</li>
+		<li>LegalEntity - Юридическое лицо клиента</li>
+		<li>Timestamp - Время операции</li>
 	</ul>
 </p>
