--- a/Alicargo/Views/Balance/History.cshtml
+++ b/Alicargo/Views/Balance/History.cshtml
@@ -10,7 +10,7 @@
 		<thead>
 			<tr>
 				<td class="timestamp">
-					@Entities.CreationTimestamp
+					@Pages.AddDate
 				</td>
 				<td class="timestamp">
 					@Entities.Timestamp
