--- a/Alicargo/Views/Balance/History.cshtml
+++ b/Alicargo/Views/Balance/History.cshtml
@@ -1,4 +1,4 @@
-﻿@using Alicargo.Core.Resources
+﻿@using Alicargo.Contracts.Resources
 @using Resources
 @model Alicargo.Contracts.Contracts.User.ClientBalanceHistoryItem[]
 @if (Model.Length > 0)
