--- a/Alicargo/Views/RestorePassword/Index.cshtml
+++ b/Alicargo/Views/RestorePassword/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using Alicargo.Core.Resources
+﻿@using Alicargo.Contracts.Resources
 @using Resources
 @using (Html.BeginForm(MVC.RestorePassword.Index(), FormMethod.Post, new { @class = "form-signin" }))
 {
