--- a/Alicargo/Views/Shared/EditorTemplates/CurrencyModel.cshtml
+++ b/Alicargo/Views/Shared/EditorTemplates/CurrencyModel.cshtml
@@ -1,4 +1,5 @@
-﻿@model CurrencyModel
+﻿@using Alicargo.Contracts.Enums
+@model CurrencyModel
 
 <div class="currency-holder">
 	<div class="input-append">
