--- a/Alicargo/Views/Calculation/Index.cshtml
+++ b/Alicargo/Views/Calculation/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using Alicargo.Core.Resources
+﻿@using Alicargo.Contracts.Resources
 @using Alicargo.MvcHelpers.BundleHelpres
 @using Resources
 @inherits BaseWebViewPage
