--- a/Alicargo/Views/Shared/Memu.cshtml
+++ b/Alicargo/Views/Shared/Memu.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Alicargo.Contracts.Enums
-@using Alicargo.Core.Resources
+@using Alicargo.Contracts.Resources
 @using Alicargo.Services
 @using Resources
 @inherits BaseWebViewPage
