--- a/Alicargo/Views/AirWaybill/AdminDetails.cshtml
+++ b/Alicargo/Views/AirWaybill/AdminDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@using Alicargo.Contracts.Resources
+﻿@using Alicargo.Core.Resources
 @inherits BaseWebViewPage<Dictionary<long, string>>
 
 <div class='grid-details'>
