--- a/Alicargo/Views/ApplicationList/ClientDetails.cshtml
+++ b/Alicargo/Views/ApplicationList/ClientDetails.cshtml
@@ -1,5 +1,4 @@
-﻿@using Alicargo.Contracts.Resources
-@using Alicargo.MvcHelpers.Extensions
+﻿@using Alicargo.Core.Resources
 @using Resources
 
 # if(DaysInWork != null){ #
