--- a/Alicargo/Views/ClientCalculation/History.cshtml
+++ b/Alicargo/Views/ClientCalculation/History.cshtml
@@ -1,4 +1,4 @@
-﻿@using Alicargo.Contracts.Resources
+﻿@using Alicargo.Core.Resources
 @model long
 <p>
 	@Entities.Balance: @ViewBag.Balance.ToString("N2")
