--- a/Alicargo/Views/SenderCalculation/Details.cshtml
+++ b/Alicargo/Views/SenderCalculation/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@using Alicargo.Contracts.Resources
+﻿@using Alicargo.Core.Resources
 <tr class="k-group-sub-footer-gray">
 	<td class='k-group-cell'>&nbsp;</td>
 	<td colspan="14">&nbsp;</td>
