--- a/Alicargo/Views/ApplicationList/AdminDetails.cshtml
+++ b/Alicargo/Views/ApplicationList/AdminDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@using Alicargo.Contracts.Resources
+﻿@using Alicargo.Core.Resources
 @using Alicargo.MvcHelpers.Extensions
 @using Resources
 # if(DaysInWork != null){ #
