--- a/Alicargo/Views/ApplicationList/Tools.cshtml
+++ b/Alicargo/Views/ApplicationList/Tools.cshtml
@@ -1,6 +1,6 @@
 ﻿@inherits BaseWebViewPage<ApplicationIndexModel>
 @using Alicargo.Contracts.Enums
-@using Alicargo.Contracts.Resources
+@using Alicargo.Core.Resources
 @using Resources
 
 @if (IdentityService.IsInRole(RoleType.Admin) || IdentityService.IsInRole(RoleType.Sender))
