--- a/Alicargo/Views/RestorePassword/NewPassword.cshtml
+++ b/Alicargo/Views/RestorePassword/NewPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@using Alicargo.Contracts.Resources
+﻿@using Alicargo.Core.Resources
 @using Resources
 @using (Html.BeginForm(MVC.RestorePassword.NewPassword(), FormMethod.Post, new { @class = "form-signin" }))
 {
