--- a/Alicargo/Views/StateSettings/Index.cshtml
+++ b/Alicargo/Views/StateSettings/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using Alicargo.Contracts.Resources
+﻿@using Alicargo.DataAccess.Contracts.Resources
 @using Resources
 @model Alicargo.ViewModels.State.StateSettingsModel
 
