--- a/Alicargo/Views/DynamicScript/Roles.cshtml
+++ b/Alicargo/Views/DynamicScript/Roles.cshtml
@@ -1,5 +1,4 @@
-﻿@using Alicargo.Contracts.Enums
-@using Alicargo.DataAccess.Contracts.Enums
+﻿@using Alicargo.DataAccess.Contracts.Enums
 @inherits BaseWebViewPage
 
 var Alicargo = (function($a){
