--- a/Alicargo/Views/Files/FilesHolder.cshtml
+++ b/Alicargo/Views/Files/FilesHolder.cshtml
@@ -1,5 +1,5 @@
-﻿@using Alicargo.Contracts.Enums
-@model Alicargo.DataAccess.Contracts.Enums.ApplicationFileType
+﻿@using Alicargo.DataAccess.Contracts.Enums
+@model ApplicationFileType
 
 <b>@Alicargo.DataAccess.Contracts.Resources.ApplicationFileType.ResourceManager.GetString(Model.ToString())</b>
 <div data-type="@Model" data-app-id="@ViewBag.ApplicationId" class="files-holder">
