--- a/Alicargo/Views/Shared/EditorTemplates/CurrencyModel.cshtml
+++ b/Alicargo/Views/Shared/EditorTemplates/CurrencyModel.cshtml
@@ -1,5 +1,4 @@
-﻿@using Alicargo.Contracts.Enums
-@using Alicargo.DataAccess.Contracts.Enums
+﻿@using Alicargo.DataAccess.Contracts.Enums
 @model CurrencyModel
 
 <div class="currency-holder">
