--- a/Alicargo/Views/ApplicationList/Index.cshtml
+++ b/Alicargo/Views/ApplicationList/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using Alicargo.Contracts.Enums
-@using Alicargo.DataAccess.Contracts.Enums
+﻿@using Alicargo.DataAccess.Contracts.Enums
 @using Alicargo.MvcHelpers.BundleHelpres
 @inherits BaseWebViewPage<ApplicationIndexModel>
 
