--- a/Alicargo/Views/Shared/Memu.cshtml
+++ b/Alicargo/Views/Shared/Memu.cshtml
@@ -1,5 +1,4 @@
-﻿@using Alicargo.Contracts.Enums
-@using Alicargo.Core.Resources
+﻿@using Alicargo.Core.Resources
 @using Alicargo.DataAccess.Contracts.Enums
 @using Alicargo.Services
 @using Resources
