--- a/Alicargo/Views/Shared/_Layout.cshtml
+++ b/Alicargo/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
-﻿@using Alicargo.Contracts.Enums
-@using Alicargo.DataAccess.Contracts.Enums
+﻿@using Alicargo.DataAccess.Contracts.Enums
 @using Alicargo.MvcHelpers.BundleHelpres
 @using Resources
 @{
