--- a/Alicargo/Views/EmailTemplate/Help.cshtml
+++ b/Alicargo/Views/EmailTemplate/Help.cshtml
@@ -66,11 +66,14 @@
 		<li>AirWaybillDisplay - Авианакладная</li>
 		<li>ApplicationDisplay - Заявка</li>
 		<li>TariffPerKg - Тариф за килограм</li>
+		<li>Weight - Вес</li>
+		<li>WeightCost - Цена за вес</li>
 		<li>ScotchCost - Цена за скотч</li>
 		<li>InsuranceCost - Страховка</li>
 		<li>FactureCost - Цена за фактура</li>
 		<li>TransitCost - Цена за доставку</li>
 		<li>PickupCost - Цена за забор</li>
+		<li>TotalCost - Итого</li>
 	</ul>
 </p>
 <p>
