--- a/Alicargo/Content/app/payment.css
+++ b/Alicargo/Content/app/payment.css
@@ -2,8 +2,13 @@
 	width: 100%;
 }
 
+	.payment-history table {
+		border-spacing: 0;
+	}
+
 	.payment-history thead td {
 		background-color: #c5c5c5;
+		background-image: none,linear-gradient(to bottom,rgba(255,255,255,.6) 0,rgba(255,255,255,.0) 100%);
 	}
 
 	.payment-history tbody td {
@@ -11,8 +16,8 @@
 	}
 
 	.payment-history td {
-		border-right: 1px solid #000;
-		padding: 0 5px;
+		padding-left: 5px;
+		padding-right: 5px;
 	}
 
 		.payment-history td:last-child {
@@ -27,6 +32,10 @@
 		min-width: 70px;
 	}
 
-.payment-history .timestamp {
-		width: 200px;
+	.payment-history .timestamp {
+		-moz-min-width: 200px;
+		-ms-min-width: 200px;
+		-o-min-width: 200px;
+		-webkit-min-width: 200px;
+		min-width: 200px;
 	}
