PaymentModel timestamp format

--- a/Alicargo/Views/Balance/EditorTemplates/PaymentModel.cshtml
+++ b/Alicargo/Views/Balance/EditorTemplates/PaymentModel.cshtml
@@ -10,7 +10,7 @@
 		</div>
 		<script>
 			$(function() {
-				$(".date-holder input").kendoDateTimePicker();
+				$(".date-holder input").kendoDatePicker();
 			})
 		</script>
 	</div>
