--- a/Alicargo/Views/Shared/Memu.cshtml
+++ b/Alicargo/Views/Shared/Memu.cshtml
@@ -42,6 +42,7 @@
 				<li>@Html.ActionLink(Pages.States, MVC.State.Index())</li>
 				<li>@Html.ActionLink(Pages.Templates, MVC.EmailTemplate.Index())</li>
 				<li>@Html.ActionLink(Pages.Cities, MVC.City.Index())</li>
+				<li>@Html.ActionLink(Pages.Countries, MVC.Country.Index())</li>
 			</ul>
 		</li>
 	}
