--- a/Alicargo/Views/Shared/EditorTemplates/TransitEditModel.cshtml
+++ b/Alicargo/Views/Shared/EditorTemplates/TransitEditModel.cshtml
@@ -4,7 +4,7 @@
 
 <div class="row">
 	<div class="span8">
-		@Html.EditorWithLabelFor(model => model.City)
+		@Html.EditorWithLabelFor(model => model.CityId)
 		@Html.EditorWithLabelFor(model => model.Address)
 		@Html.EditorWithLabelFor(model => model.RecipientName)
 		@Html.EditorWithLabelFor(model => model.Phone)
