--- a/Alicargo/Views/Client/EditorTemplates/ClientModel.cshtml
+++ b/Alicargo/Views/Client/EditorTemplates/ClientModel.cshtml
@@ -67,9 +67,8 @@
 	@Pages.Transit
 </h4>
 @Html.Action(MVC.Transit.EditByClient((long?)ViewBag.ClientId))
-@*@Html.Partial("EditorTemplates/TransitEditModel", (TransitEditModel)ViewBag.Transit)*@
 <hr />
 <h4>
 	@Pages.Authentication
 </h4>
-@Html.Action(MVC.Authentication.Client((long?)ViewBag.ClientId))
+@Html.EditorFor(x => x.Authentication)
