--- a/Alicargo/Views/Transit/EditorTemplates/TransitEditModel.cshtml
+++ b/Alicargo/Views/Transit/EditorTemplates/TransitEditModel.cshtml
@@ -4,7 +4,8 @@
 
 <div class="row">
 	<div class="span8">
-		@Html.EditorWithLabelFor(model => model.CityId)
+		@Html.LabelFor(x => x.CityId)
+		@Html.DropDownListFor(x => x.CityId, (IDictionary<long, string>)ViewBag.Cities)
 		@Html.EditorWithLabelFor(model => model.Address)
 		@Html.EditorWithLabelFor(model => model.RecipientName)
 		@Html.EditorWithLabelFor(model => model.Phone)
