--- a/Alicargo/Views/Sender/EditorTemplates/SenderModel.cshtml
+++ b/Alicargo/Views/Sender/EditorTemplates/SenderModel.cshtml
@@ -1,14 +1,14 @@
 ﻿@using Alicargo.MvcHelpers.Extensions
 @model Alicargo.ViewModels.User.SenderModel
-
 <div class="row">
 	<div class="span4">
 		@Html.EditorWithLabelFor(model => model.Name)
-	</div>
-	<div class="span4">
 		@Html.EditorWithLabelFor(model => model.Email)
+
 	</div>
 	<div class="span4">
+		@Html.LabelFor(x => x.CountryId)
+		@Html.DropDownListFor(x => x.CountryId, (IDictionary<long, string>)ViewBag.Countries)
 		@Html.EditorWithLabelFor(model => model.TariffOfTapePerBox)
 	</div>
 </div>
