--- a/Alicargo/Views/Files/SenderApplication.cshtml
+++ b/Alicargo/Views/Files/SenderApplication.cshtml
@@ -17,7 +17,7 @@
 	</div>
 </div>
 <p>
-	<a href="@Url.Action(MVC.Application.Edit((long) ViewBag.ApplicationId))" class="btn btn-primary">@Pages.ApplicationEdit</a>
+	<a href="@Url.Action(MVC.SenderApplication.Edit((long) ViewBag.ApplicationId))" class="btn btn-primary">@Pages.ApplicationEdit</a>
 </p>
 
 @section scripts
