--- a/Alicargo/Content/app/entity.css
+++ b/Alicargo/Content/app/entity.css
@@ -15,12 +15,20 @@
 		width: 756px;
 	}
 
-	.entity-edit .span4 .currency-holder input {
-		width: 310px;
-	}
-
 	.entity-edit .currency-holder .dropdown-menu {
 		min-width: initial;
+	}
+
+	.entity-edit .span3 input {
+		width: 256px;
+	}
+
+	.entity-edit .span3 select {
+		width: 270px;
+	}
+
+	.entity-edit .span3 .currency-holder input {
+		width: 210px;
 	}
 
 	.entity-edit .span4 input {
@@ -34,6 +42,10 @@
 	.entity-edit .span4 textarea {
 		height: 85px;
 		width: 356px;
+	}
+
+	.entity-edit .span4 .currency-holder input {
+		width: 310px;
 	}
 
 	.entity-edit .span4 .ui-tabs {
