--- a/Alicargo/Content/app/layout.css
+++ b/Alicargo/Content/app/layout.css
@@ -51,3 +51,16 @@ h4 {
 h1, h2, h3, h4 {
 	line-height: 1.5em;
 }
+
+.input-validation-error {
+	color: #b94a48 !important;
+	border-color: #e9322d !important;
+	-webkit-box-shadow: 0 0 6px #f8b9b7 !important;
+	-moz-box-shadow: 0 0 6px #f8b9b7 !important;
+	box-shadow: 0 0 6px #f8b9b7 !important;
+}
+
+.validation-summary-errors {
+	margin-top: 20px;
+	color: #b94a48;
+}
