--- a/Alicargo/Views/ApplicationList/Index.cshtml
+++ b/Alicargo/Views/ApplicationList/Index.cshtml
@@ -1,14 +1,12 @@
-﻿@using Alicargo.DataAccess.Contracts.Enums
-@using Alicargo.MvcHelpers.BundleHelpres
+﻿@using Alicargo.App_Start.Mvc
+@using Alicargo.DataAccess.Contracts.Enums
 @inherits BaseWebViewPage<ApplicationIndexModel>
-
 <style>
 	.container {
 		padding: 0 20px;
 		width: auto;
 	}
 </style>
-
 @Html.Partial("Tools")
 <div id="application-grid" class="grid"></div>
 <script type="text/x-kendo-template" id="application-grid-details">
