--- a/Alicargo/Views/User/Index.cshtml
+++ b/Alicargo/Views/User/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@using Alicargo.DataAccess.Contracts.Enums
-@using Alicargo.MvcHelpers.BundleHelpres
+﻿@using Alicargo.App_Start.Mvc
+@using Alicargo.DataAccess.Contracts.Enums
 @using Resources
-@model Alicargo.DataAccess.Contracts.Enums.RoleType
+@model RoleType
 <style>
 	.container {
 		padding: 0 20px;
