--- a/Alicargo/Content/app/common.css
+++ b/Alicargo/Content/app/common.css
@@ -1,63 +1,77 @@
-﻿.home-page {
+﻿.row .span12 input[type="text"] {
+	display: block;
+	width: 1156px;
+}
+
+.row .span12 textarea {
+	height: 300px;
+	width: 1156px;
+}
+
+.span2 .k-datetimepicker {
+	width: 170px;
+}
+
+.home-page {
 	font-family: "Myriad pro", Arial, Helvetica, sans-serif;
 	margin-top: 200px;
 }
 
 	.home-page h1 {
+		color: #000;
 		font-size: 36px;
 		font-weight: normal;
-		text-align: center;
-		color: #000;
 		line-height: 40px;
+		text-align: center;
 	}
 
 	.home-page h2 {
+		color: #000;
 		font-family: "Myriad pro", Arial, Helvetica, sans-serif;
 		font-size: 36px;
 		font-weight: normal;
-		text-align: center;
-		color: #000;
 		line-height: 40px;
+		text-align: center;
 	}
 
 	.home-page h3 {
+		color: #000;
 		font-family: "Myriad pro", Arial, Helvetica, sans-serif;
 		font-size: 69px;
 		font-weight: normal;
-		text-align: center;
-		color: #000;
 		line-height: 40px;
+		text-align: center;
 	}
 
 	.home-page h4 {
+		color: gray;
 		font-family: Helvetica, sans-serif;
 		font-size: 16px;
 		font-weight: normal;
-		text-align: center;
-		color: gray;
 		margin-bottom: 5%;
+		text-align: center;
 	}
 
 	.home-page p {
+		color: #000;
 		font-size: 14px;
 		margin: 0;
 		padding: 0;
-		color: #000;
 	}
 
 
 .form-signin {
-	max-width: 300px;
-	padding: 19px 29px 19px;
-	margin: 200px auto 20px;
+	-moz-border-radius: 5px;
+	-moz-box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
+	-webkit-border-radius: 5px;
+	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
 	background-color: #fff;
 	border: 1px solid #e5e5e5;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
 	border-radius: 5px;
-	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-	box-shadow: 0 1px 2px rgba(0,0,0,.05);
+	box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
+	margin: 200px auto 20px;
+	max-width: 300px;
+	padding: 19px 29px 19px;
 }
 
 	.form-signin .form-signin-heading,
@@ -78,21 +92,203 @@
 	}
 
 
-.input-validation-error {
-	color: #b94a48 !important;
-	border-color: #e9322d !important;
-	-webkit-box-shadow: 0 0 6px #f8b9b7 !important;
-	-moz-box-shadow: 0 0 6px #f8b9b7 !important;
-	box-shadow: 0 0 6px #f8b9b7 !important;
-}
-
-.validation-summary-errors {
-	margin-top: 20px;
-	color: #b94a48;
-}
-
 .super {
-	position: absolute;
 	font-size: 0.7em;
+	position: absolute;
 	vertical-align: super;
+}
+
+.entity-edit {
+	margin-top: 20px;
+}
+
+	.entity-edit .span2 input {
+		width: 156px;
+	}
+
+	.entity-edit .span8 input {
+		width: 756px;
+	}
+
+	.entity-edit .span8 textarea {
+		height: 85px;
+		width: 756px;
+	}
+
+	.entity-edit .currency-holder .dropdown-menu {
+		min-width: initial;
+	}
+
+	.entity-edit .span3 input {
+		width: 256px;
+	}
+
+	.entity-edit .span3 select {
+		width: 270px;
+	}
+
+	.entity-edit .span3 .currency-holder input {
+		width: 210px;
+	}
+
+	.entity-edit .span4 input {
+		width: 356px;
+	}
+
+	.entity-edit .span4 select {
+		width: 370px;
+	}
+
+	.entity-edit .span4 textarea {
+		height: 85px;
+		width: 356px;
+	}
+
+	.entity-edit .span4 .currency-holder input {
+		width: 310px;
+	}
+
+	.entity-edit .span4 .ui-tabs {
+		margin-bottom: 25px;
+	}
+
+		.entity-edit .span4 .ui-tabs select {
+			margin-bottom: 0;
+			width: 322px;
+		}
+
+		.entity-edit .span4 .ui-tabs input {
+			margin-bottom: 0;
+			width: 308px;
+		}
+
+.entity-details {
+	margin-bottom: 20px;
+}
+
+	.entity-details label {
+		font-weight: bold;
+	}
+
+.grid {
+	font-size: 8pt;
+	margin-bottom: 20px;
+}
+
+	.grid .btn {
+		font-size: 1.2em;
+	}
+
+	.grid label, button, select {
+		font-size: 1.2em;
+		font-weight: normal;
+		line-height: 1.4em;
+	}
+
+	.grid .k-button-icontext {
+		height: 16px;
+		margin: 0;
+		min-width: 0 !important;
+		padding: 0;
+		width: 16px;
+	}
+
+		.grid .k-button-icontext:hover {
+			text-decoration: none;
+		}
+
+		.grid .k-button-icontext span {
+			background-image: url('../kendo/2013.3.1119/Default/sprite.png');
+			background-repeat: no-repeat;
+			border-color: transparent;
+			display: inline-block;
+			font-size: 0;
+			height: 16px;
+			line-height: 0;
+			margin: 0;
+			overflow: hidden;
+			padding: 0;
+			width: 16px;
+		}
+
+.grid-details {
+	background-color: rgb(248, 252, 248);
+	padding: 10px;
+}
+
+	.grid-details p:last-child {
+		margin-bottom: 0;
+	}
+
+	.grid-details .properties {
+		-moz-column-count: 5;
+		-webkit-column-count: 5;
+		column-count: 5;
+	}
+
+		.grid-details .properties p {
+			white-space: normal;
+		}
+
+.grid-details-toolbar {
+	margin-bottom: 0;
+}
+
+	.grid-details-toolbar select {
+		height: 20px;
+		margin-bottom: 0;
+	}
+
+	.grid-details-toolbar label {
+		display: inline-block;
+	}
+
+.select-client-holder select {
+	margin-bottom: 0;
+	width: auto;
+}
+
+.date-holder {
+	margin-bottom: 10px;
+}
+
+.state-edit-checkbox label {
+	display: inline-block;
+	margin-right: 5px;
+}
+
+.state-edit-checkbox input.check-box {
+	display: inline-block;
+	margin-bottom: 5px;
+	width: auto;
+}
+
+.template-edit-settings table {
+	margin-bottom: 20px;
+}
+
+	.template-edit-settings table td {
+		border-bottom: 1px gray solid;
+		text-align: center;
+	}
+
+	.template-edit-settings table .title {
+		font-weight: bold;
+		padding: 0 10px;
+		text-align: left;
+	}
+
+.template-edit-settings label {
+	display: inline-block;
+	margin: 0 10px 0 0;
+}
+
+.template-edit-settings input[type="checkbox"] {
+	display: inline-block;
+	margin: 0;
+	width: auto;
+}
+
+.countries .k-multiselect{
+	margin-bottom: 10px;
 }
