--- a/Alicargo/Views/ClientCalculation/Index.cshtml
+++ b/Alicargo/Views/ClientCalculation/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using Alicargo.Core.Resources
-@using Alicargo.MvcHelpers.BundleHelpres
+﻿@using Alicargo.App_Start.Mvc
+@using Alicargo.Core.Resources
 @using Resources
 @inherits BaseWebViewPage
 <style>
