--- a/Alicargo/Views/Files/ClientApplication.cshtml
+++ b/Alicargo/Views/Files/ClientApplication.cshtml
@@ -1,5 +1,5 @@
-﻿@using Alicargo.DataAccess.Contracts.Enums
-@using Alicargo.MvcHelpers.BundleHelpres
+﻿@using Alicargo.App_Start.Mvc
+@using Alicargo.DataAccess.Contracts.Enums
 @using Resources
 
 <h1>
