--- a/Alicargo/Views/State/Edit.cshtml
+++ b/Alicargo/Views/State/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@using Alicargo.MvcHelpers.BundleHelpres
+﻿@using Alicargo.App_Start.Mvc
 @using Alicargo.MvcHelpers.Extensions
 @using Resources
 @model Alicargo.ViewModels.State.StateEditModel
