--- a/Alicargo/Content/app/common.css
+++ b/Alicargo/Content/app/common.css
@@ -289,6 +289,9 @@
 	width: auto;
 }
 
-.countries .k-multiselect{
+.countries .k-multiselect {
 	margin-bottom: 10px;
+	max-height: 200px;
+	overflow-x: hidden;
+	overflow-y: auto;
 }
