--- a/Alicargo/Views/Application/EditorTemplates/ApplicationAdminModel.cshtml
+++ b/Alicargo/Views/Application/EditorTemplates/ApplicationAdminModel.cshtml
@@ -22,7 +22,7 @@
 		@Html.LabelFor(x => x.CountryId)
 		@Html.DropDownListFor(x => x.CountryId, (IDictionary<long, string>)ViewBag.Countries)
 		@Html.LabelFor(x => x.SenderId)
-		@Html.DropDownListFor(x => x.SenderId, (IDictionary<long, string>)ViewBag.Senders)
+		@Html.DropDownListFor(x => x.SenderId, (IDictionary<long?, string>)ViewBag.Senders, Pages.DefineByContry)
 		@Html.LabelFor(x => x.ForwarderId)
 		@Html.DropDownListFor(x => x.ForwarderId, (IDictionary<long, string>)ViewBag.Forwarders)
 		@Html.LabelFor(model => model.MethodOfDelivery)
